--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,7 +50,7 @@ main {
 
 h2 {
     color: var(--heading-color);
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 10px;
     color-scheme: light dark;
 }
@@ -67,7 +67,6 @@ ul li {
 ul a {
     text-decoration: none;
     color: var(--link-color);
-    transition: color 0.3s ease;
     background-color: var(--link-background);
     padding: 5px 10px;
     border-radius: 8px;
@@ -75,7 +74,6 @@ ul a {
         color 0.3s ease,
         background-color 0.3s ease,
         padding 0.3s ease;
-    transition-duration: 0.3s;
     color-scheme: light dark;
 }
 
